etc/lean.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-go
  labels:
    app: go-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: go-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello-world-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-hello-world
          image: go-helloworld:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              protocol: TCP
          lifecycle:
            postStart:
              exec:
                command: 
                  [
                    "/bin/sh",
                    "-c",
                    "cd /app/ && ./main"
                  ]
---
